--- a/EcoNote/View/Showgift.xaml
+++ b/EcoNote/View/Showgift.xaml
@@ -16,5 +16,6 @@
             </Button.Background>
         </Button>
         <DataGrid HorizontalAlignment="Left" Height="268" Margin="20,160,0,0" VerticalAlignment="Top" Width="576"/>
+        <TextBox HorizontalAlignment="Left" Height="209" Margin="653,145,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="102"/>
     </Grid>
 </Page>
