--- a/EcoNote/View/Showgift.xaml
+++ b/EcoNote/View/Showgift.xaml
@@ -10,11 +10,37 @@
 
     <Grid>
 
-        <Button Content="" HorizontalAlignment="Left" Height="135" Margin="10,10,0,0" VerticalAlignment="Top" Width="245" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_1">
+        <Button Content="" HorizontalAlignment="Left" Height="135" Margin="10,10,0,0" VerticalAlignment="Top" Width="245" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/스몰로고.png"/>
             </Button.Background>
         </Button>
-        <DataGrid HorizontalAlignment="Left" Height="268" Margin="20,160,0,0" VerticalAlignment="Top" Width="576"/>
+
+        <TextBox x:Name="idsession" HorizontalAlignment="Left" Margin="147,154,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="127" BorderBrush="{x:Null}" Background="{x:Null}" >
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.521"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="0.376"/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBlock HorizontalAlignment="Left" Height="54" Margin="284,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="219" FontSize="36" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님"/><Run Text="의 교환권"/></TextBlock>
+
+        <DataGrid HorizontalAlignment="Left" Height="330" Margin="10,199,0,0" VerticalAlignment="Top" Width="639"/>
+        <Border BorderBrush="LightGray" BorderThickness="3" HorizontalAlignment="Left" Height="344" Margin="660,185,0,0" VerticalAlignment="Top" Width="213"/>
+        <Label Content="교환권 정보" HorizontalAlignment="Left" Height="54" VerticalAlignment="Top" Width="196" Background="{x:Null}" FontSize="24" BorderBrush="White" FontWeight="Bold" Margin="698,199,0,0"/>
+        <TextBox x:Name="busnum3" HorizontalAlignment="Left" Height="37" Margin="698,354,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615" />
+        <Label Content="상품명" HorizontalAlignment="Left" Height="40" Margin="729,247,0,0" VerticalAlignment="Top" Width="74" FontSize="20" FontWeight="Bold" RenderTransformOrigin="1.561,-4.249"/>
+        <TextBox x:Name="name" HorizontalAlignment="Left" Height="37" Margin="698,278,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18"/>
+        <Label Content="금액" HorizontalAlignment="Left" Height="40" Margin="740,323,0,0" VerticalAlignment="Top" Width="63" FontSize="20" FontWeight="Bold"/>
+        <Label Content="교환 날짜" HorizontalAlignment="Left" Height="40" Margin="721,399,0,0" VerticalAlignment="Top" Width="96" FontSize="20" FontWeight="Bold" RenderTransformOrigin="0.469,0.872"/>
+        <TextBox x:Name="ddate4" HorizontalAlignment="Left" Height="37" Margin="698,432,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615"/>
+        <Button Content="" HorizontalAlignment="Left" Height="47" Margin="713,478,0,0" VerticalAlignment="Top" Width="119" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+            <Button.Background>
+                <ImageBrush ImageSource="C:\Users\nyj54\OneDrive\바탕 화면\github\EcoNote\이미지\교환취소.png"/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Page>
