--- a/EcoNote/View/Exchange.xaml
+++ b/EcoNote/View/Exchange.xaml
@@ -15,90 +15,91 @@
             </Button.Background>
         </Button>
 
-        <TextBox x:Name="idsession" HorizontalAlignment="Left" Margin="473,24,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="108" BorderBrush="{x:Null}" Background="{x:Null}" />
-        <TextBlock HorizontalAlignment="Left" Height="54" Margin="581,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="36" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
-        <TextBox x:Name="idsession_Copy" HorizontalAlignment="Left" Margin="742,24,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="118" BorderBrush="{x:Null}" Background="{x:Null}" />
+        <TextBox x:Name="textboxid"   HorizontalAlignment="Left" Height="37" Margin="602,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Left" Height="41" Margin="677,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="147" FontSize="25" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
+        <TextBox x:Name="textboxc"   HorizontalAlignment="Left" Height="37" Margin="789,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
+
 
 
         <ScrollViewer HorizontalAlignment="Left" Height="355" Margin="10,185,0,0" VerticalAlignment="Top" Width="645">
             <WrapPanel>
-                <Button HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\1인영화관람권.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_2">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\가나마일드초콜렛.jpg"/>
                     </Button.Background>
 
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_3">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\교촌허니콤보웨지감자세트.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_4">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\던킨모바일교환권.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_5">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\망고치즈빙수설빙.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_6">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\바나나맛우유.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_7">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\비타500.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_8">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\빅맥세트.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_9">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\서브웨이모바일금액권.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_10">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\스타벅스세트.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_11">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\스타벅스아메리카노.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_12">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\육개장사발면.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_13">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\초코에몽.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_14">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\츄파춥스.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_15">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\파리바게트모바일금액권.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+                <Button Content="" HorizontalAlignment="Left" Height="180" Margin="20,20,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_16">
                     <Button.Background>
                         <ImageBrush ImageSource="C:\연주\github\EcoNote\이미지\상품권\파인트.jpg"/>
                     </Button.Background>
@@ -109,15 +110,19 @@
 
         <Border BorderBrush="LightGray" BorderThickness="3" HorizontalAlignment="Left" Height="344" Margin="664,185,0,0" VerticalAlignment="Top" Width="213"/>
         <Label Content="교환권 정보" HorizontalAlignment="Left" Height="54" VerticalAlignment="Top" Width="196" Background="{x:Null}" FontSize="24" BorderBrush="White" FontWeight="Bold" Margin="702,199,0,0"/>
-        <TextBox x:Name="busnum3" HorizontalAlignment="Left" Height="37" Margin="702,354,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615" />
-        <Label Content="상품명" HorizontalAlignment="Left" Height="40" Margin="733,247,0,0" VerticalAlignment="Top" Width="74" FontSize="20" FontWeight="Bold" RenderTransformOrigin="1.561,-4.249"/>
-        <TextBox x:Name="name" HorizontalAlignment="Left" Height="37" Margin="702,278,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18"/>
-        <Label Content="금액" HorizontalAlignment="Left" Height="40" Margin="744,323,0,0" VerticalAlignment="Top" Width="63" FontSize="20" FontWeight="Bold"/>
-        <Label Content="구매시 잔여코인" HorizontalAlignment="Left" Height="40" Margin="695,399,-5,0" VerticalAlignment="Top" Width="210" FontSize="20" FontWeight="Bold" RenderTransformOrigin="0.469,0.872"/>
-        <TextBox x:Name="ddate4" HorizontalAlignment="Left" Height="37" Margin="702,432,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615"/>
+        <TextBox x:Name="price" HorizontalAlignment="Left" Height="37" Margin="702,372,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615" />
+        <Label Content="상품명" HorizontalAlignment="Left" Height="40" Margin="733,279,0,0" VerticalAlignment="Top" Width="74" FontSize="20" FontWeight="Bold" RenderTransformOrigin="1.561,-4.249"/>
+        <TextBox x:Name="name" HorizontalAlignment="Left" Height="37" Margin="702,310,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18"/>
+        <Label Content="금액" HorizontalAlignment="Left" Height="40" Margin="744,342,0,0" VerticalAlignment="Top" Width="63" FontSize="20" FontWeight="Bold"/>
+        <Label Content="구매시 잔여코인" HorizontalAlignment="Left" Height="40" Margin="695,406,-5,0" VerticalAlignment="Top" Width="210" FontSize="20" FontWeight="Bold" RenderTransformOrigin="0.469,0.872"/>
+        <TextBox x:Name="rest" HorizontalAlignment="Left" Height="37" Margin="702,438,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" FontSize="18" RenderTransformOrigin="0.148,0.615"/>
+
+        <Label Content="상품번호" HorizontalAlignment="Left" Height="40" Margin="687,246,0,0" VerticalAlignment="Top" Width="90" FontSize="20" FontWeight="Bold" RenderTransformOrigin="0.469,0.872"/>
+        <TextBox x:Name="num" HorizontalAlignment="Left" Height="37" Margin="777,246,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" FontSize="18" RenderTransformOrigin="0.148,0.615"/>
 
 
-        <Button Content="" HorizontalAlignment="Left" Height="47" Margin="717,478,0,0" VerticalAlignment="Top" Width="119" BorderBrush="White" RenderTransformOrigin="1.246,0.522">
+
+        <Button Content="" HorizontalAlignment="Left" Height="47" Margin="717,478,0,0" VerticalAlignment="Top" Width="119" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_17">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/교환하기.png"/>
             </Button.Background>
