--- a/EcoNote/View/Main.xaml
+++ b/EcoNote/View/Main.xaml
@@ -34,15 +34,15 @@
             </Button.Background>
         </Button>
 
-        <Button Content="" HorizontalAlignment="Left" Height="84" Margin="722,84,0,0" VerticalAlignment="Top" Width="138" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_5">
+        <Button Content="" HorizontalAlignment="Left" Height="84" Margin="722,77,0,0" VerticalAlignment="Top" Width="138" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_5">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/바코드.png"/>
             </Button.Background>
         </Button>
 
-        <TextBox x:Name="idsession" HorizontalAlignment="Left" Margin="473,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="108" BorderBrush="{x:Null}" Background="{x:Null}" />
-        <TextBlock HorizontalAlignment="Left" Height="54" Margin="581,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="36" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
-        <TextBox x:Name="idsession_Copy" HorizontalAlignment="Left" Margin="742,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="118" BorderBrush="{x:Null}" Background="{x:Null}" />
+        <TextBox x:Name="textboxid"   HorizontalAlignment="Left" Height="37" Margin="602,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Left" Height="41" Margin="677,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="147" FontSize="25" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
+        <TextBox x:Name="textboxc"   HorizontalAlignment="Left" Height="37" Margin="789,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
 
 
     </Grid>
