--- a/EcoNote/View/Note.xaml
+++ b/EcoNote/View/Note.xaml
@@ -20,34 +20,34 @@
             </Button.Background>
         </Button>
 
-        <TextBox x:Name="idsession" HorizontalAlignment="Left" Margin="512,22,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="108" BorderBrush="{x:Null}" Background="{x:Null}" />
-        <TextBlock HorizontalAlignment="Left" Height="54" Margin="620,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" FontSize="36" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
-        <TextBox x:Name="idsession_Copy" HorizontalAlignment="Left" Margin="781,22,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.383,-0.033" FontSize="36" FontWeight="Bold" Height="53" Width="118" BorderBrush="{x:Null}" Background="{x:Null}" />
+        <TextBox x:Name="textboxid"   HorizontalAlignment="Left" Height="37" Margin="602,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Left" Height="41" Margin="677,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="147" FontSize="25" Foreground="YellowGreen" FontWeight="Bold"><Run Text="님의 "/><Run Text="코인"/></TextBlock>
+        <TextBox x:Name="textboxc"   HorizontalAlignment="Left" Height="37" Margin="789,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" FontSize="18"/>
 
-        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="149,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click" Grid.Row="1">
+        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="149,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click2" Grid.Row="1">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/자전거.png"/>
             </Button.Background>
         </Button>
 
-        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="366,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1">
+        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="366,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1" Click="Button_Click3">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/달리기.png"/>
             </Button.Background>
         </Button>
 
-        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="587,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1" >
+        <Button Content="" HorizontalAlignment="Left" Height="180" Margin="587,103,0,0" VerticalAlignment="Top" Width="180" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1" Click="Button_Click4" >
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/걷기.png"/>
             </Button.Background>
         </Button>
 
         <Label Content="로 " HorizontalAlignment="Left" Height="39" Margin="289,345,0,0" VerticalAlignment="Top" Width="108" FontSize="18" Foreground="#FF060606" Grid.Row="1"/>
-        <TextBox x:Name="textbox1" HorizontalAlignment="Left" Height="33" Margin="130,345,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="18" BorderBrush="YellowGreen" Grid.Row="1" />
+        <TextBox x:Name="textbox1"  HorizontalAlignment="Left" Height="33" Margin="130,345,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="18" BorderBrush="YellowGreen" Grid.Row="1" />
         <Label Content="km 이동하였습니다." HorizontalAlignment="Left" Height="39" Margin="482,345,0,0" VerticalAlignment="Top" Width="190" FontSize="18" Foreground="#FF060606" Grid.Row="1"/>
-        <TextBox x:Name="textbox1_Copy" HorizontalAlignment="Left" Height="33" Margin="323,345,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="18" BorderBrush="YellowGreen" Grid.Row="1" />
+        <TextBox x:Name="textbox2" HorizontalAlignment="Left" Height="33" Margin="323,345,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="18" BorderBrush="YellowGreen" Grid.Row="1" />
 
-        <Button Content="" HorizontalAlignment="Left" Height="58" Margin="663,334,0,0" VerticalAlignment="Top" Width="139" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1" >
+        <Button Content="" HorizontalAlignment="Left" Height="58" Margin="663,334,0,0" VerticalAlignment="Top" Width="139" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Grid.Row="1" Click="Button_Click_5" >
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/기록하기.png"/>
             </Button.Background>
