--- a/EcoNote/View/Dona.xaml
+++ b/EcoNote/View/Dona.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="EcoNote.View.Donation"
+﻿<Page x:Class="EcoNote.View.Dona"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,9 @@
       xmlns:local="clr-namespace:EcoNote.View"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="900"
-      Title="Donation">
+      Title="Dona">
 
     <Grid>
-
         <Button Content="" HorizontalAlignment="Left" Height="135" Margin="10,10,0,0" VerticalAlignment="Top" Width="245" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click_1">
             <Button.Background>
                 <ImageBrush ImageSource="/이미지/스몰로고.png"/>
@@ -32,8 +31,8 @@
 
         <Image HorizontalAlignment="Left" Height="289" Margin="514,183,0,0" VerticalAlignment="Top" Width="289" Source="C:\연주\github\EcoNote\이미지\기부2.png"/>
         <Image HorizontalAlignment="Left" Height="88" Margin="387,290,0,0" VerticalAlignment="Top" Width="111" Source="C:\연주\github\EcoNote\이미지\화살표.png"/>
-        <TextBox x:Name="money"  HorizontalAlignment="Left" Height="33" Margin="133,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115" FontSize="18" BorderBrush="YellowGreen" />
-        <TextBox x:Name="totalMoney"  HorizontalAlignment="Left" Height="33" Margin="574,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115" FontSize="18" BorderBrush="YellowGreen" />
+        <TextBox x:Name="money"   HorizontalAlignment="Left" Height="33" Margin="133,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115" FontSize="18" BorderBrush="YellowGreen" />
+        <TextBox x:Name="totalMoney" HorizontalAlignment="Left" Height="33" Margin="574,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115" FontSize="18" BorderBrush="YellowGreen" />
 
 
         <Button Content="" HorizontalAlignment="Left" Height="44" Margin="168,361,0,0" VerticalAlignment="Top" Width="99" BorderBrush="White" RenderTransformOrigin="1.246,0.522" Click="Button_Click">
@@ -41,6 +40,5 @@
                 <ImageBrush ImageSource="/이미지/기부하기.png"/>
             </Button.Background>
         </Button>
-
     </Grid>
 </Page>
